--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -348,9 +348,9 @@
 <div class="mobile">
     <div style="display: flex;flex-direction: column;text-align: center;align-items: center;">
 
-        <div style="font-size: 25px;color: #324395;padding-bottom: 10px;">{{bmxItem.componentSettings[0].categoryName}}
+        <div style="font-size: 25px;color: #324395;padding-bottom: 10px;margin: 5px;">{{bmxItem.componentSettings[0].categoryName}}
         </div>
-        <div style="font-size: 18px;color: #ee7f25;padding-bottom: 20px;">
+        <div style="font-size: 18px;color: #ee7f25;padding-bottom: 20px;margin: 10px;">
             {{bmxItem.componentSettings[0].categoryDescription}}</div>
         <!-- <button mat-raised-button *ngIf="this.bmxItem.componentSettings[0].rankType == 'dragAndDrop'"
             style="font-size: 18px;color: #ee7f25;width: 150;" (click)="toggleScrolling()" cdkDrag>
