--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/logo-header/logo-header.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/logo-header/logo-header.component.html
@@ -1,27 +1,16 @@
 <div class="desktop">
     <span
-        style="color: #053074;font-size: 30px;outline: none;font-family: Arial, Helvetica, sans-serif;text-align: center;padding-top: 20px;">{{bmxItem.componentText}}</span>
-
+        style="color: #053074;font-size: 30px;outline: none;font-family: Arial, Helvetica, 
+        sans-serif;text-align: center;padding-top: 20px;">{{bmxItem.componentText}}</span>
+        <div class="emoji-handle">.</div>
     <div
         style="display: flex;flex-direction: row;justify-items: center;justify-content: space-between;align-items: center;margin: -30px 35px;">
-
-
         <div>
             <img style="width: 231px;margin-left: 8px;margin-top: 60px;"
-                [src]="bmxItem.componentSettings[0].brandInstituteURL">
-
-            <!-- <div style="margin-left: 50px;">
-            <div style="font-size: 16px;margin-top: 10px;color: #48535e;">CATEGORY HEADER HERE</div>
-            <div style="font-size: 14px;margin-bottom: 20px;color: lightgray;">Brief Description Here</div>
-        </div> -->
+                [src]="(isBrandMatrixSurvey)?bmxItem.componentSettings[0].brandInstituteSurveyLogoURL:
+                bmxItem.componentSettings[0].brandInstituteLogoURL">
         </div>
-
         <div>
-            <!-- <button (click)="toggleInstructions()" style="margin-right: 33px;" mat-icon-button matTooltip="Instructions"
-            matTooltipPosition="above">
-          
-            <mat-icon style="font-size: 30px;color: #37457d;" class="full-icon">description</mat-icon>
-        </button> -->
             <input type="file" class="file-input" (change)="onFileSelected($event)" #fileUpload style="display: none;"
                 accept="image/x-png,image/gif,image/jpeg">
 
@@ -42,30 +31,20 @@
 
 <!-- MOBILE CODE -->
 <div class="mobile">
-
-    
     <div
         style="display: flex;flex-direction: column;justify-items: center;justify-content: space-between;align-items: center;">
-
-
         <div>
             <img style="width: 50px; margin-bottom: 13px;"
                 [src]="bmxItem.componentSettings[0].brandInstituteMobileURL">
-
         </div>
-
         <div>
-    
-
             <!-- <img (mouseenter)="displayLogoWidthRange = true" (dblclick)="fileUpload.click()"
                 [width]="bmxItem.componentSettings[0].logoWidth" 
                 [src]="bmxItem.componentSettings[0].companyLogoURL"> -->
         </div>
-
         <div>
             <span
         style="color: #053074;font-size: 20px;outline: none;font-family: Arial, Helvetica, sans-serif;text-align: center;padding-top: 20px;">{{bmxItem.componentText}}</span>
-
         </div>
     </div>
 </div>
