--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -290,7 +290,7 @@
                             </div>
                         </div>
                         <ng-template #elseBlock>
-                            <div style="position: relative;top: -5px;">
+                            <div style="position: relative;">
                                 <mat-icon matRipple *ngFor="let star of  testName.STARS; let x =  index"
                                     (click)="setRating(star.id,y)" [ngClass]="star.styleClass"
                                     (mouseenter)="selectStar(star.id , y)" (mouseleave)="leaveStar(y)"
@@ -357,9 +357,9 @@
 <div class="mobile">
     <div style="display: flex;flex-direction: column;text-align: center;">
 
-        <div style="font-size: 25px;color: #324395;padding-bottom: 10px;">{{bmxItem.componentSettings[0].categoryName}}
+        <div style="font-size: 25px;color: #324395;padding-bottom: 10px;margin: 5px;">{{bmxItem.componentSettings[0].categoryName}}
         </div>
-        <div style="font-size: 18px;color: #ee7f25;padding-bottom: 20px;">
+        <div style="font-size: 18px;color: #ee7f25;padding-bottom: 20px;margin: 10px;">
             {{bmxItem.componentSettings[0].categoryDescription}}</div>
 
     </div>
