--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
@@ -24,23 +24,23 @@
         matTooltipPosition="above" mat-icon-button aria-label="ranking">
         <mat-icon style="font-size: 26px;" class="full-icon">vertical_distribute</mat-icon>
     </button>
-    <button (click)="editSingleTableCells = !editSingleTableCells" 
+    <button (click)="editSingleTableCells = !editSingleTableCells"
         [ngClass]="(!editSingleTableCells)?'add-column':'add-column-active'" style="margin: -50px 195px;"
         matTooltip="edit tabel cells" matTooltipPosition="above" mat-icon-button aria-label="ranking">
         <mat-icon style="font-size: 26px;" class="full-icon">explicit</mat-icon>
     </button>
-    <button (click)="dragRows = !dragRows" 
-        [ngClass]="(!dragRows)?'add-column':'add-column-active'" style="margin: -50px  225px;"
-        matTooltip="drag rows" matTooltipPosition="above" mat-icon-button aria-label="ranking">
+    <button (click)="dragRows = !dragRows" [ngClass]="(!dragRows)?'add-column':'add-column-active'"
+        style="margin: -50px  225px;" matTooltip="drag rows" matTooltipPosition="above" mat-icon-button
+        aria-label="ranking">
         <mat-icon style="font-size: 26px;" class="full-icon">drag_indicator</mat-icon>
     </button>
-    <button (click)="deleteRows = !deleteRows" 
-        [ngClass]="(!deleteRows)?'add-column':'add-column-active'" style="margin: -50px 255px;"
-        matTooltip="delete rows" matTooltipPosition="above" mat-icon-button aria-label="ranking">
+    <button (click)="deleteRows = !deleteRows" [ngClass]="(!deleteRows)?'add-column':'add-column-active'"
+        style="margin: -50px 255px;" matTooltip="delete rows" matTooltipPosition="above" mat-icon-button
+        aria-label="ranking">
         <mat-icon style="font-size: 26px;" class="full-icon">delete_outline</mat-icon>
     </button>
-    <button (click)="isColumnResizerOn = !isColumnResizerOn" 
-        [ngClass]="(!isColumnResizerOn)?'add-column':'add-column-active'" style="margin: -50px 290px;" 
+    <button (click)="isColumnResizerOn = !isColumnResizerOn"
+        [ngClass]="(!isColumnResizerOn)?'add-column':'add-column-active'" style="margin: -50px 290px;"
         matTooltip="columns width" matTooltipPosition="above" mat-icon-button aria-label="ranking">
         <mat-icon style="font-size: 26px;" class="full-icon">swap_horizontal_circle</mat-icon>
     </button>
@@ -230,7 +230,7 @@
             {{bmxItem.componentSettings[0].categoryDescription}}</div>
 
     </div>
-    <div class="scroller-style main-container" style="margin-bottom: 45px;" [dragula]="(dragRows)?'DRAGGABLE_ROW':''" 
+    <div class="scroller-style main-container" style="margin-bottom: 45px;" [dragula]="(dragRows)?'DRAGGABLE_ROW':''"
         [(dragulaModel)]="bmxItem.componentText" (dragulaModelChange)="checkDragEvetn($event);">
 
         <div *ngFor="let testName of bmxItem.componentText; let y = index">
@@ -287,11 +287,12 @@
 
                         <!-- TEXT_AREA COLUMN-->
                         <textarea *ngIf="y !== 0  && columnName.includes('Comments') == true"
-                            [style.width]="(columnName == 'rationale')?bmxItem.componentSettings[0].rationalewidth + 'px':bmxItem.componentSettings[0].columnWidth +'px'"
+                            [style.width]="(bmxItem.componentSettings[0].columnWidth - 20) +'px'"
                             [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'" cdkTextareaAutosize
                             [cdkAutosizeMinRows]="bmxItem.componentSettings[0].rowHeight"
-                            style="text-align: center;height: 32px;width: 358px;font-size: 16px;border: 1px solid grey;"
+                            style="text-align: center;height: 32px;width: 358px;font-size: 16px;border: 1px solid #dddddd;"
                             class="row-box" [(ngModel)]="testName[columnName]" rows="4" cols="50"></textarea>
+
 
                         <img class="row-box" style="width: 300px;" [src]="testName[columnName]"
                             *ngIf="(y !== 0) && (columnName == 'name' || columnName == 'nameCandidates')">
@@ -313,40 +314,37 @@
                     <!-- 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 END TABLE CELLS 🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡🟡 -->
                 </div>
                 <!--⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ STARS RENDERER ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ -->
-                <div style="min-width: 260px;background-color:white;display: flex;align-items: center;
-                justify-content: center;border-left: rgb(231, 230, 230) 1px solid;
+                <div style="display: flex;align-items: center;
+                justify-content: center;border-left: rgb(231, 230, 230) 1px solid;min-width: 260px;background-color:white;
                 border-right: rgb(231, 230, 230) 1px solid;border-top: rgb(231, 230, 230) 1px solid;">
                     <div *ngIf="(y !== 0)">
                         <div *ngIf="testName.CRITERIA; else elseBlock">
                             <div *ngFor="let criteria of testName.CRITERIA  let x =  index"
-                                style="display: flex;flex-direction: column;justify-content: space-between;border-bottom: rgb(231, 230, 230) 1px solid;">
+                                style="display: flex;flex-direction: column;justify-content: space-between;text-align: center;">
                                 <span [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
                                     style="padding-top:6px;max-width: 200px;">{{criteria.name}}</span>
                                 <div style="min-width: 200px;padding-bottom:6px">
-                                    <button *ngFor="let star of  criteria.STARS;"
+                                    <mat-icon matRipple *ngFor="let star of  criteria.STARS;"
                                         (click)="setCriteriaRating(star.id,x,y)" [ngClass]="star.styleClass"
                                         (mouseenter)="selectCriteriaStar(star.id,x,y)"
-                                        (mouseleave)="leaveCriteriaStar(y,x)" style="outline: none;margin:-5px -11px;"
-                                        mat-icon-button aria-label="ranking">
-                                        <mat-icon>{{star.icon}}</mat-icon>
-                                    </button>
+                                        (mouseleave)="leaveCriteriaStar(y,x)"
+                                        style="outline: none;margin:1px -1px;cursor: pointer;">{{star.icon}}</mat-icon>
                                 </div>
                             </div>
                         </div>
                         <ng-template #elseBlock>
-                            <div style="position: relative;top: -5px;">
-                                <button *ngFor="let star of  testName.STARS; let x =  index"
+                            <div style="position: relative;">
+                                <mat-icon matRipple *ngFor="let star of  testName.STARS; let x =  index"
                                     (click)="setRating(star.id,y)" [ngClass]="star.styleClass"
                                     (mouseenter)="selectStar(star.id , y)" (mouseleave)="leaveStar(y)"
-                                    style="outline: none;margin:-5px -11px;" mat-icon-button aria-label="ranking">
-                                    <mat-icon>{{star.icon}}</mat-icon>
-                                </button>
+                                    style="outline: none;margin:1px -1px;cursor: pointer;">{{star.icon}}</mat-icon>
                             </div>
                         </ng-template>
                     </div>
+
                     <!-- 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 RATE BUTTONS 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 -->
                     <div style="display: flex;">
-                        <button (click)="bmxItem.componentText[y]['RATE'] = 0;leaveStar(y)"
+                        <button (click)="maxRuleCounterMinus();bmxItem.componentText[y]['RATE'] = 0;leaveStar(y)"
                             *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 " style="background-color: #ee7f25;    
                             color: white;
                             min-width: 20px;
@@ -372,13 +370,14 @@
                         </div>
                     </div>
                     <!-- 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 END RATE BUTTONS 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 -->
+
                     <textarea *ngIf="y == 0 && editSingleTableCells"
                         [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
                         style="text-align: center; font-weight: bold;color: #324395;" class="row-box"
                         [(ngModel)]="bmxItem.componentSettings[0].ratingScaleTitle"
                         value="bmxItem.componentSettings[0].ratingScaleTitle"></textarea>
-                    <div class="rating-text" *ngIf="y == 0 && !editSingleTableCells">
-                        {{bmxItem.componentSettings[0].ratingScaleTitle}}</div>
+                    <div [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'" class="rating-text"
+                        *ngIf="y == 0 && !editSingleTableCells">{{bmxItem.componentSettings[0].ratingScaleTitle}}</div>
                 </div>
                 <!--⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ END STARS ⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️⭐️ -->
 
@@ -427,8 +426,7 @@
             <div class="test-name-table" *ngIf="(y != 0)" [style.height]="(selectedCard == y)?'':'100px'">
                 <!-- 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 RATE BUTTONS 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 -->
                 <button (click)="maxRuleCounterMinus();bmxItem.componentText[y]['RATE'] = 0;leaveStar(y)"
-                    *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 " 
-                    style="background-color: #ee7f25;color: white;margin: 5px;width: 30px;
+                    *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 " style="background-color: #ee7f25;color: white;margin: 5px;width: 30px;
                     height: 30px;
                     line-height: 30px;right: 7px;
                     position: absolute;animation: rubberBand 700ms ease-in  forwards;"
@@ -438,9 +436,8 @@
 
                 <div style="display: flex;gap: 23px;padding-top: 10px;position: absolute;right: 24px;">
                     <div *ngFor="let criteria of testName.CRITERIA  let x =  index">
-                        <button (click)="criteria.RATE = 0;leaveCriteriaStar(y,x)"
-                         *ngIf="criteria.RATE>0 && y != 0 "
-                          style="background-color: #ee7f25;    
+                        <button (click)="criteria.RATE = 0;leaveCriteriaStar(y,x)" *ngIf="criteria.RATE>0 && y != 0 "
+                            style="background-color: #ee7f25;    
                              color: white;
                              min-width: 20px;
                              line-height: 19px;
@@ -449,7 +446,7 @@
                              animation: rubberBand 700ms ease-in  forwards;" mat-button>{{criteria.RATE}}</button>
                     </div>
                 </div>
-                 <!-- 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 END RATE BUTTONS 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 -->
+                <!-- 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 END RATE BUTTONS 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 -->
                 <div *ngFor="let columnName of columnsNames; let e =  index">
                     <!-- <div *ngIf="(y == 0)" class="header-title " >
                         <p style="text-align: center; font-weight: bold;color: #324395;margin: 0 0 0px;"
