--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
@@ -239,12 +239,20 @@
 
 
                         <!-- TEXT_AREA COLUMN-->
-                        <textarea *ngIf="y !== 0  && columnName.includes('Answers') == true"
+                        <!-- <textarea *ngIf="y !== 0  && columnName.includes('Answers') == true"
                             [style.width]="(columnName == 'rationale')?bmxItem.componentSettings[0].rationalewidth + 'px':bmxItem.componentSettings[0].columnWidth +'px'"
                             [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'" cdkTextareaAutosize
                             [cdkAutosizeMinRows]="bmxItem.componentSettings[0].rowHeight"
                             style="text-align: initial;height: 32px;width: 358px;font-size: 16px;border: 1px solid grey;padding: 6px 10px;"
+                            class="row-box" [(ngModel)]="testName[columnName]" rows="4" cols="50"></textarea> -->
+
+                            <textarea *ngIf="y !== 0  && columnName.includes('Answers') == true"
+                            [style.width]="(bmxItem.componentSettings[0].columnWidth - 20) +'px'"
+                            [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'" cdkTextareaAutosize
+                            [cdkAutosizeMinRows]="bmxItem.componentSettings[0].rowHeight"
+                            style="text-align: center;height: 32px;width: 358px;font-size: 16px;border: 1px solid #dddddd;"
                             class="row-box" [(ngModel)]="testName[columnName]" rows="4" cols="50"></textarea>
+
 
 
                         <!-- TEXT AREA TO EDIT TABLE CELL CONTENT -->
