--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/question-answer/question-answer.component.html
@@ -16,8 +16,8 @@
         matTooltipPosition="above" mat-icon-button aria-label="ranking">
         <mat-icon style="font-size: 26px;" class="full-icon">radio_button_checked</mat-icon>
     </button>
-    <button (click)="insertCommentBoxColumn()" class="add-column" style="margin: -50px 125px;"
-        matTooltip="add a Comment box column" matTooltipPosition="above" mat-icon-button aria-label="ranking">
+    <button (click)="insertAnswerColumn()" class="add-column" style="margin: -50px 125px;"
+        matTooltip="add comment box column" matTooltipPosition="above" mat-icon-button aria-label="ranking">
         <mat-icon style="font-size: 26px;" class="full-icon">wysiwyg</mat-icon>
     </button>
     <button (click)="insertRow()" class="add-column" style="margin: -50px 155px;" matTooltip="insert row"
@@ -160,12 +160,12 @@
             class="slider-font-size" tickInterval="1" min="50" max="1000"
             [value]="bmxItem.componentSettings[0].columnWidth">
     </div>
-    <div style="display: flex;flex-direction: column;align-items: center;">
+    <!-- <div style="display: flex;flex-direction: column;align-items: center;">
         <p style="margin: 0 0 -12px;color: grey;">ratinale width: {{bmxItem.componentSettings[0].rationalewidth}} px</p>
         <input type="range" style="margin: 20px;width: 140px;" [(ngModel)]="bmxItem.componentSettings[0].rationalewidth"
             class="slider-font-size" tickInterval="1" min="50" max="1000"
             [value]="bmxItem.componentSettings[0].rationalewidth">
-    </div>
+    </div> -->
     <div style="display: flex;flex-direction: column;align-items: center;">
         <p style="margin: 0 0 -12px;color: grey;">font size: {{bmxItem.componentSettings[0].fontSize}} px</p>
         <input type="range" style="margin: 20px;width: 140px;" [(ngModel)]="bmxItem.componentSettings[0].fontSize"
@@ -237,8 +237,8 @@
                             <div *ngFor="let checkBoxName of testName[columnName].split(','); let m = index" 
                             style="display: flex;flex-direction: row;gap:10px; justify-content: space-between;  ">
                                 <label for="">{{checkBoxName}}</label>
-                                <input type="checkbox" [checked]="false"
-                                    (change)="saveMultipleChoice(columnName, y,  m)">
+                                <input type="checkbox" [checked]="allComplete"
+                                    (change)="saveMultipleChoice(checkBoxName, y,  $event)">
 
                             </div>
                         </div>
