--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/tinder/tinder.component.scss
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/tinder/tinder.component.scss
@@ -39,6 +39,13 @@
   gap: 10px;
 }
 
+.positive{
+  color: #ed252f;
+}
+.negative{
+  color: #00cd38;
+}
+
 .active-rating-star {
   color: #76d354;
 }
